<resources>
    <string name="app_name">Facewise</string>
    <string name="forgot_password_"><u>Forgot Password?</u></string>
    <string name="by_logging_in_you_agree_to_our_nterms_amp_conditions_amp_privacy_policy"><![CDATA[By logging in, you agree to our \nTerms & Conditions & Privacy Policy]]></string>
    <string name="terms_amp_conditions"> <u><![CDATA[Terms & Conditions]]></u> </string>
    <string name="privacy_policy"> <u>Privacy Policy</u></string>
    <string name="create_an_account"><u>Create An Account</u></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="enter_a_name_please">Enter a name please</string>
    <string name="enter_an_email_please">Enter an email please</string>
    <string name="enter_a_password_please">Enter a password please</string>
    <string name="enter_password_again_please">Enter password again please</string>
    <string name="enter_a_valid_email_please">Enter a valid email please</string>
    <string name="password_and_confirm_password_should_be_same">Password and Confirm Password should be same</string>
    <string name="password_length_must_be_of_8_characters">Password length must be of 8 characters</string>
    <string name="agree_to_our_terms_conditions_and_privacy_policy"><![CDATA[Agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="facewise_privacy_policy">
    <![CDATA[This Privacy Policy governs the manner in which Facewise collects, uses, maintains, and discloses information collected from users (each, a &quot;User&quot;) of the Facewise mobile application (&quot;App&quot;). This privacy policy applies to the App and all products and services offered by Facewise.\n\n
    <br><br><b>Information We Collect</b><br><br>
    We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our App, register on the App, add images, and interact with the App\'s features. Users may be asked for their name, email address, and images. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain App-related activities.\n\n
    <br><br><b>How We Use Collected Information</b><br><br>
    <ol>Facewise may collect and use Users\' personal information for the following purposes:
    <li>  To personalize user experience: We may use information in the aggregate to understand how our Users as a group use the services and resources provided on our App.</li>
    <li>  To improve our App: We continually strive to improve our App offerings based on the information and feedback we receive from you.</li>
    <li>  To send periodic emails: We may use the email address to respond to Users\' inquiries, questions, and/or other requests. If Users decide to opt-in to our mailing list, they will receive emails that may include company news, updates, related product or service information, etc. If at any time the User would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email.</li></ol>
    <b>How We Protect Your Information</b><br><br>
    We adopt appropriate data collection, storage, and processing practices and security measures to protect against unauthorized access, alteration, disclosure, or destruction of your personal information, username, password, transaction information, and data stored on our App.\n\n
    Sharing Your Personal Information We do not sell, trade, or rent Users\' personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates, and advertisers for the purposes outlined above.\n\n
    <br><br><b>Changes to This Privacy Policy</b><br><br>
    Facewise has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.\n\n
    Your Acceptance of These Terms By using this App, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our App. Your continued use of the App following the posting of changes to this policy will be deemed your acceptance of those changes.\n\n
    <br><br><b>Contacting Us</b><br><br>
    If you have any questions about this Privacy Policy, the practices of this App, or your dealings with this App, please contact us at <b>facewiseapp@gmail.com</b>.\n\n]]>

</string>
    <string name="facewise_privacy_policy_title">FaceWise Privacy Policy</string>
    <string name="facewise_terms_conditions_title">FaceWise Terms &amp; Conditions</string>
    <string name="facewise_terms_codition">
    <![CDATA[
    <b>Please read these terms and conditions carefully before using the Facewise mobile application ("App") operated by Facewise.</b><br><br>

    <b>1. Acceptance of Terms</b><br><br>

    By accessing or using the App, you agree to be bound by these terms and conditions and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing the App.<br><br>

    <b>2. Use License</b><br><br>

    Permission is granted to temporarily download one copy of the App for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license, you may not:<br><br>

    Modify or copy the App.
    <ul>
    <li>Use the App for any commercial purpose or for any public display (commercial or non-commercial).</li>
    <li>Remove any copyright or other proprietary notations from the App.</li>
    <li>Transfer the App to another person or "mirror" the materials on any other server.</li>
    </ul>
    This license shall automatically terminate if you violate any of these restrictions and may be terminated by Facewise at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.<br><br>

    <b>3. Disclaimer</b><br><br>

    The App and its contents are provided on an "as is" basis. Facewise makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.<br><br>

    <b>4. Limitations</b><br><br>

    In no event shall Facewise or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the App, even if Facewise or a Facewise authorized representative has been notified orally or in writing of the possibility of such damage.<br><br>

    <b>5. Revisions and Errata</b><br><br>

    The materials appearing in the App could include technical, typographical, or photographic errors. Facewise does not warrant that any of the materials on the App are accurate, complete, or current. Facewise may make changes to the materials contained in the App at any time without notice.<br><br>

    <b>6. Governing Law</b><br><br>

    Any claim relating to the App shall be governed by the laws of [Country/State] without regard to its conflict of law provisions.<br><br>

    <b>7. Changes to Terms and Conditions</b><br><br>

    Facewise may revise these terms and conditions for the App at any time without notice. By using the App, you are agreeing to be bound by the then current version of these terms and conditions.<br><br>

    <b>Contacting Us</b><br><br>

    If you have any questions about these terms and conditions, the practices of the App, or your dealings with the App, please contact us at facewiseapp@gmail.com.
    ]]>
</string>
    <string name="facewise_about_us_title">About Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="by_logging_in_you_agree_to_our_terms_amp_conditions_and_privacy_policy"><![CDATA[By logging in, you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="signup"><u>SignUp</u></string>
    <string name="let_s_sign_in">Let\'s Sign In</string>
    <string name="welcome_back_nyou_ve_been_missed">Welcome Back,\nYou\'ve been missed!</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="signin"><u>SignIn</u></string>
    <string name="let_s_sign_up">Let\'s Sign Up</string>
    <string name="to_get_started_nenter_the_following_details">To Get Started,\nEnter The Following Details!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_clicking_on_this_you_re_agreeing_to_the_terms_amp_conditions_and_privacy_policy"><![CDATA[By clicking on this, you\'re agreeing to the Terms & Conditions and Privacy Policy]]></string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_logout">Are you sure you want logout?</string>
    <string name="confirm">Confirm</string>
</resources>