<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="viewModel"
            type="com.kuro.facewise.presentation.auth.sign_in.SignInViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".presentation.auth.sign_in.SignInFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textLetsSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/let_s_sign_in"
                android:textColor="?colorOnSurface"
                android:textSize="@dimen/textTitleSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/welcome_back_nyou_ve_been_missed"
                android:textColor="?colorOnSurface"
                android:textSize="@dimen/textSubTitleSize"
                app:layout_constraintStart_toStartOf="@id/textLetsSignUp"
                app:layout_constraintTop_toBottomOf="@id/textLetsSignUp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUserEmail"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="@id/textLetsSignUp"
                app:layout_constraintTop_toBottomOf="@id/textWelcomeBack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.userEmail}"
                    android:textSize="@dimen/textSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUserPassword"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="@id/textLetsSignUp"
                app:layout_constraintTop_toBottomOf="@id/etUserEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword"
                    android:text="@={viewModel.userPassword}"
                    android:textSize="@dimen/textSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvForgotPassword"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/forgot_password_"
                android:textSize="@dimen/textSize"
                app:layout_constraintEnd_toEndOf="@id/etUserPassword"
                app:layout_constraintTop_toBottomOf="@id/etUserPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize"
                android:visibility="@{isLoading?View.INVISIBLE:View.VISIBLE}"
                app:cornerRadius="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
                app:strokeColor="?colorOnSurface"
                app:strokeWidth="@dimen/_1sdp" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.WanderingCubes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{isLoading?View.VISIBLE:View.INVISIBLE}"
                app:SpinKit_Color="@color/blue"
                app:layout_constraintBottom_toBottomOf="@id/btnSignIn"
                app:layout_constraintEnd_toEndOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toTopOf="@id/btnSignIn" />

            <TextView
                android:id="@+id/tvTermsConditionsAndPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/by_logging_in_you_agree_to_our_terms_amp_conditions_and_privacy_policy"
                android:textColor="?colorOnSurface"
                android:textSize="@dimen/textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

            <TextView
                android:id="@+id/textOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/don_t_have_an_account"
                android:textColor="?colorOnSurface"
                android:textSize="@dimen/textSize"
                app:layout_constraintBaseline_toBaselineOf="@id/btnSignUp"
                app:layout_constraintEnd_toStartOf="@id/btnSignUp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/signup"
                android:textSize="@dimen/textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textOr"
                app:layout_constraintTop_toBottomOf="@+id/tvTermsConditionsAndPolicy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>